fixing typo in function sayHello
fixing typo in function sayHello

--- a/quick-start/3.-browser-to-service.md
+++ b/quick-start/3.-browser-to-service.md
@@ -31,7 +31,7 @@ And let's work it from the top:
 * Specify the `HelloPeer` interface and function binding \(15-16\) for the local service
 * Create the Aqua workflow function `sayHello`  \(18-29\)
 
-Before we dive into the `sayHelo` function, let's look at why we still need a local service even though we deployed a hosted service. The reason for that lies in the need for the browser client to be able to consume the message sent from the other browser through the relay peer. With that out of the way, let's dig in:
+Before we dive into the `sayHello` function, let's look at why we still need a local service even though we deployed a hosted service. The reason for that lies in the need for the browser client to be able to consume the message sent from the other browser through the relay peer. With that out of the way, let's dig in:
 
 * The function signature \(18\) takes two arguments: `targetPeerId`, which is the client peer id of the other browser and  the `targetelayPeerId`, which is the relay id -- both parameters are the values  you copy and pasted from the second browser tab into the first browser tab
 * The first step is to call on the hosted service `HelloWorld` on the host peer `helloWorldPeerId` , which we specified in line 1
