--- a/quick-start/2.-hosted-services.md
+++ b/quick-start/2.-hosted-services.md
@@ -185,7 +185,7 @@ Replace `<YOUR_SECRET_KEY>` with the generated secret key and while in the `quic
 aqua remote deploy_service \
     --addr /dns4/kras-04.fluence.dev/tcp/19001/wss/p2p/12D3KooWFEwNWcHqi9rtsmDhsYcDbRUCDXH84RC4FW6UfsFWaoHi \
     --sk <YOUR_SECRET_KEY> \
-    --data-path configs/hello_world_deployment_cfg.json \
+    --config-path configs/hello_world_deployment_cfg.json \
     --service hello-world
 ```
 
