Update [2.-hosted-services.md] aqua deploy_service syntax (#32)
* Update 2.-hosted-services.md

Update aqua 'deploy_service' syntax

* Update 2.-hosted-services.md

Changed to `--config-path`

--- a/quick-start/2.-hosted-services.md
+++ b/quick-start/2.-hosted-services.md
@@ -172,13 +172,21 @@ Which gets us a list of network peers:
 /dns4/kras-09.fluence.dev/tcp/19001/wss/p2p/12D3KooWD7CvsYcpF9HE9CCV9aY3SJ317tkXVykjtZnht2EbzDPm
 ```
 
-Let's use the peer`12D3KooWFEwNWcHqi9rtsmDhsYcDbRUCDXH84RC4FW6UfsFWaoHi` as our deployment target and deploy our service from the VSCode terminal. In the `quickstart/2-hosted-services` directory run:
+Let's use the peer`12D3KooWFEwNWcHqi9rtsmDhsYcDbRUCDXH84RC4FW6UfsFWaoHi` as our deployment target and deploy our service from the VSCode terminal. 
+
+To do so we first need to generate a `secret key`. Run:
+```bash
+aqua key create
+```
+
+Replace `<YOUR_SECRET_KEY>` with the generated secret key and while in the `quickstart/2-hosted-services` directory run:
 
 ```bash
-aqua remote deploy \
-     --addr /dns4/kras-04.fluence.dev/tcp/19001/wss/p2p/12D3KooWFEwNWcHqi9rtsmDhsYcDbRUCDXH84RC4FW6UfsFWaoHi \
-     --config-path configs/hello_world_deployment_cfg.json \
-     --service hello-world
+aqua remote deploy_service \
+    --addr /dns4/kras-04.fluence.dev/tcp/19001/wss/p2p/12D3KooWFEwNWcHqi9rtsmDhsYcDbRUCDXH84RC4FW6UfsFWaoHi \
+    --sk <YOUR_SECRET_KEY> \
+    --config-path configs/hello_world_deployment_cfg.json \
+    --service hello-world
 ```
 
 Which gives us a unique service id:
